# continual-learning

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  cataract1k_debug.ipynb  coco-utils.ipynb  create-coco.ipynb  dataset_cont_learning.ipynb  dataset_testing-cataract-101.ipynb  download-cataract-1k.ipynb  huggingface_B_training_CL_ProjHead.ipynb  huggingface_CaDIS_CL_ProjHead.ipynb  huggingface_CaDIS_CL_ProjLayer.ipynb  huggingface_CaDIS_CL_aug_Prototypes.ipynb  huggingface_CaDIS_contrastiveLoss.ipynb  huggingface_CaDIS_contrastiveLoss_aug.ipynb  huggingface_contrastive_loss_RandomReplay.ipynb  huggingface_focal_loss.ipynb  huggingface_frozen_backbone_32MB_batch_replay.ipynb  huggingface_kd.ipynb  huggingface_kd_ema-hyperparam-search.ipynb  huggingface_kd_ema.ipynb  huggingface_kd_ema_mean_loss_batch_replay.ipynb  huggingface_latent_replay32MB.ipynb  huggingface_max_loss_32mb_replay.ipynb  huggingface_max_loss_32mb_replay_batch.ipynb  huggingface_meanLoss_CL_AUG_Prototypes-each.ipynb  huggingface_mean_loss+CL_sampling_CL_AUG-each.ipynb  huggingface_mean_loss_32mb_replay.ipynb  huggingface_mean_loss_32mb_replay_batch.ipynb  huggingface_mean_loss_CL_AUG-each.ipynb  huggingface_mean_loss_CL_AUG.ipynb  huggingface_mean_loss_contrastiveLearning.ipynb  huggingface_min_loss_32mb_replay.ipynb  huggingface_min_loss_32mb_replay_batch.ipynb  huggingface_naive_finetuning-agumentation.ipynb  huggingface_naive_finetuning-augmentation.ipynb  huggingface_naive_finetuning.ipynb  huggingface_naive_forgetting-augmentations.ipynb  huggingface_naive_forgetting-augmentations.py  (+28 more)
aa-experiments/cadisv2/: search.yaml
test-merging/: merged_coco.json
utils/: altered_m2f.py  augmentations.py  coco-util-test.py  coco_utils.py  common.py  data_loading.py  dataset_utils.py  kd.py  losses.py  medical_datasets.py  sampler.py  vis_utils.py  wandb_utils.py
