[tool.poetry]
name = "continual-learning"
version = "0.1.0"
description = ""
authors = ["Kristiyan Sakalyan <kristian.sakalian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.2"
torchvision = "^0.17.2"
matplotlib = "^3.8.4"
tqdm = "^4.66.2"
opencv-python = "^4.9.0.80"
transformers = "^4.40.1"
scipy = "^1.13.0"
evaluate = "^0.4.1"
tensorboard = "^2.16.2"
synapseclient = "^4.2.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
pycocotools = ">=2.0.2"
wandb = "^0.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pre-commit = "^3.7.0"
ipywidgets = "^8.1.2"
